<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <!--TODO ENTER YOUR APP ID BELOW-->
    <string name="facebook_app_id"/>
    <!--TODO ENTER YOUR APP ID BELOW (eg: fb0123456789)-->
    <string name="fb_login_protocol_scheme">fb</string>
    <!--TODO ENTER YOUR Client Token BELOW-->
    <string name="facebook_client_token"/>
    <string name="lbl_good_morning">Good morning</string>
    <string name="lbl_share">Share</string>
    <string name="lbl_photos">Photos</string>
    <string name="lbl_pm">pm</string>
    <string name="lbl_download">Download</string>
    <string name="lbl_2">2</string>
    <string name="lbl_iceland">Iceland</string>
    <string name="lbl_3">3</string>
    <string name="lbl_4">4</string>
    <string name="lbl_from_alan">From Alan</string>
    <string name="lbl_222">222</string>
    <string name="lbl_germany">Germany</string>
    <string name="lbl_trip_to">Trip to</string>
    <string name="lbl_the_alps">The Alps</string>
    <string name="lbl_2022">2022</string>
    <string name="lbl_2021">2021</string>
    <string name="lbl_2020">2020</string>
    <string name="lbl_add_trip">Add trip</string>
    <string name="lbl_app_navigation">App Navigation</string>
    <string name="lbl_your_trips">Your trips</string>
    <string name="lbl_search_here">Search Here</string>
    <string name="lbl_11_05">11:05</string>
    <string name="lbl_abc">ABC</string>
    <string name="lbl_button">Button</string>
    <string name="lbl_track">Track</string>
    <string name="lbl_qax">qax</string>
    <string name="lbl_8_ago">8 ago</string>
    <string name="msg_to_complete_the">To complete the alps</string>
    <string name="lbl_17_05">17:05</string>
    <string name="msg_check_your_app">"Check your app's UI from the below demo screens of your app."</string>
    <string name="lbl_12_ago">12 ago</string>
    <string name="msg_go_to_the_large">Go to the largest ski resort 
in Switzerland</string>
    <string name="lbl_switzerland">Switzerland</string>
    <string name="lbl_am">am</string>
    <string name="msg_this_contact_has_no_phone_nu">This contact has no phone number</string>
    <string name="msg_camera_storage_permission">This Application need permission\n1.Camera permission to capture the image.\n2.Storage Access permission to save the captured image.</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
</resources>
