<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="abcVM" type="com.amitsapplication.app.modules.abc.data.viewmodel.AbcVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearGroup78"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylepink_300">
        <ScrollView android:clipToPadding="false"
            android:fillViewport="true" android:gravity="start"
            android:id="@+id/scrollViewScrollview"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/_31pxv"
            android:layout_weight="1" android:layout_width="match_parent">
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linear1"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="vertical">
                <LinearLayout android:id="@+id/linearGroup60"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700cornerRadius">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtGroup68"
                        android:layout_gravity="end"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_131pxh"
                        android:layout_marginStart="@dimen/_131pxh"
                        android:layout_marginTop="@dimen/_54pxv"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="@{abcVM.abcModel.txtGroup68}"
                        style="@style/txtregular8" tools:text="@string/lbl_button"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtTrack"
                        android:layout_gravity="start"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_42pxh"
                        android:layout_marginStart="@dimen/_42pxh"
                        android:layout_marginTop="@dimen/_45pxv"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="@{abcVM.abcModel.txtTrack}"
                        style="@style/txtPoppinsmedium20" tools:text="@string/lbl_track"/>
                    <Spinner android:gravity="start"
                        android:id="@+id/spinnerYourtrips"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_42pxh"
                        android:layout_marginStart="@dimen/_42pxh"
                        android:layout_width="match_parent" tools:listitem="@layout/spinner_item"/>
                    <LinearLayout android:gravity="start"
                        android:id="@+id/linearGroup57"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_42pxh"
                        android:layout_marginStart="@dimen/_42pxh"
                        android:layout_marginTop="@dimen/_8pxv"
                        android:layout_width="match_parent"
                        android:orientation="horizontal" style="@style/groupStylegray_50cornerRadius">
                        <ImageView android:id="@+id/imageGroup7"
                            android:layout_height="@dimen/_18pxh"
                            android:layout_marginBottom="@dimen/_13pxv"
                            android:layout_marginStart="@dimen/_18pxh"
                            android:layout_marginTop="@dimen/_14pxv"
                            android:layout_width="@dimen/_18pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_group7"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_group7"/>
                        <androidx.appcompat.widget.SearchView
                            android:id="@+id/searchViewViewguide"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_10pxv"
                            android:layout_marginEnd="@dimen/_186pxh"
                            android:layout_marginStart="@dimen/_14pxh"
                            android:layout_marginTop="@dimen/_11pxv"
                            android:layout_weight="0.83"
                            android:layout_width="0dp"
                            app:iconifiedByDefault="false" app:queryHint="@string/lbl_search_here"/>
                    </LinearLayout>
                    <LinearLayout android:gravity="start"
                        android:id="@+id/linearGroup65"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_56pxv"
                        android:layout_marginTop="@dimen/_66pxv"
                        android:layout_width="match_parent" android:orientation="horizontal">
                        <LinearLayout android:gravity="start"
                            android:id="@+id/linearGroup64"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_42pxh"
                            android:layout_weight="0.61"
                            android:layout_width="0dp" android:orientation="vertical">
                            <LinearLayout
                                android:id="@+id/linearGroup63"
                                android:layout_height="wrap_content"
                                android:layout_width="match_parent" android:orientation="horizontal">
                                <LinearLayout android:gravity="start"
                                    android:id="@+id/linearGroup61"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="@dimen/_4pxv"
                                    android:layout_weight="0.2"
                                    android:layout_width="0dp" android:orientation="vertical">
                                    <LinearLayout
                                    android:id="@+id/linearGroup58"
                                    android:layout_height="wrap_content"
                                    android:layout_width="match_parent" android:orientation="horizontal">
                                    <TextView
                                    android:id="@+id/txtZipcode"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0.86"
                                    android:layout_width="0dp"
                                    android:text="@{abcVM.abcModel.txtZipcode}"
                                    style="@style/txtPoppinssemibold16" tools:text="@string/lbl_2022"/>
                                    <View
                                    android:background="@drawable/rectangle_bg_pink_300_radius_17"
                                    android:id="@+id/viewRectangle322"
                                    android:layout_height="@dimen/_10pxh"
                                    android:layout_marginBottom="@dimen/_23pxv"
                                    android:layout_marginStart="@dimen/_2pxh"
                                    android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_4pxh"/>
                                    </LinearLayout>
                                    <TextView
                                    android:id="@+id/txtZipcode1"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="@dimen/_6pxh"
                                    android:layout_marginTop="@dimen/_91pxv"
                                    android:layout_width="match_parent"
                                    android:text="@{abcVM.abcModel.txtZipcode1}"
                                    style="@style/txtPoppinsmedium16" tools:text="@string/lbl_2021"/>
                                </LinearLayout>
                                <FrameLayout
                                    android:id="@+id/frameGroup70"
                                    android:layout_height="@dimen/_168pxv"
                                    android:layout_marginStart="@dimen/_40pxh" android:layout_width="@dimen/_121pxh">
                                    <ImageView
                                    android:id="@+id/imageRectangle318"
                                    android:layout_gravity="start"
                                    android:layout_height="@dimen/_168pxh"
                                    android:layout_width="@dimen/_121pxh"
                                    android:scaleType="fitXY"
                                    cornerRadius="@{@dimen/_21pxh}"
                                    imageRes="@{@drawable/img_rectangle318}"
                                    tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle318"/>
                                    <TextView android:ellipsize="end"
                                    android:gravity="top|start"
                                    android:id="@+id/txtCountry"
                                    android:layout_gravity="top|center"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="@dimen/_20pxv"
                                    android:layout_marginEnd="@dimen/_14pxh"
                                    android:layout_marginStart="@dimen/_14pxh"
                                    android:layout_marginTop="@dimen/_20pxv"
                                    android:layout_width="match_parent"
                                    android:singleLine="true"
                                    android:text="@{abcVM.abcModel.txtCountry}"
                                    style="@style/txtPoppinsmedium16_1" tools:text="@string/lbl_switzerland"/>
                                </FrameLayout>
                            </LinearLayout>
                            <LinearLayout
                                android:id="@+id/linearGroup59"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_12pxv"
                                android:layout_width="match_parent" android:orientation="horizontal">
                                <TextView android:id="@+id/txtZipcode2"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="@dimen/_101pxv"
                                    android:layout_marginTop="@dimen/_72pxv"
                                    android:layout_weight="0.17"
                                    android:layout_width="0dp"
                                    android:text="@{abcVM.abcModel.txtZipcode2}"
                                    style="@style/txtPoppinsmedium16" tools:text="@string/lbl_2020"/>
                                <FrameLayout
                                    android:id="@+id/frameGroup72"
                                    android:layout_height="@dimen/_212pxv"
                                    android:layout_marginStart="@dimen/_46pxh" android:layout_width="@dimen/_121pxh">
                                    <ImageView
                                    android:id="@+id/imageRectangle320"
                                    android:layout_gravity="start"
                                    android:layout_height="@dimen/_212pxh"
                                    android:layout_width="@dimen/_121pxh"
                                    android:scaleType="fitXY"
                                    cornerRadius="@{@dimen/_21pxh}"
                                    imageRes="@{@drawable/img_rectangle320}"
                                    tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle320"/>
                                    <TextView android:ellipsize="end"
                                    android:gravity="top|start"
                                    android:id="@+id/txtCountry1"
                                    android:layout_gravity="top|center"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="@dimen/_20pxv"
                                    android:layout_marginEnd="@dimen/_22pxh"
                                    android:layout_marginStart="@dimen/_22pxh"
                                    android:layout_marginTop="@dimen/_20pxv"
                                    android:layout_width="match_parent"
                                    android:singleLine="true"
                                    android:text="@{abcVM.abcModel.txtCountry1}"
                                    style="@style/txtPoppinsmedium16_1" tools:text="@string/lbl_germany"/>
                                </FrameLayout>
                            </LinearLayout>
                        </LinearLayout>
                        <LinearLayout android:gravity="start"
                            android:id="@+id/linearGroup62"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_132pxh"
                            android:layout_marginStart="@dimen/_14pxh"
                            android:layout_weight="0.39"
                            android:layout_width="0dp" android:orientation="vertical">
                            <EditText
                                android:background="@android:color/transparent"
                                android:ellipsize="end"
                                android:hint="@string/lbl_qax"
                                android:id="@+id/etGroup74"
                                android:inputType="text"
                                android:layout_height="wrap_content"
                                android:layout_width="match_parent"
                                android:singleLine="true"
                                android:text="@={abcVM.abcModel.etGroup74Value}"
                                android:textColorHint="@color/black_900_null"
                                style="@style/etregular0" tools:ignore="Autofill"/>
                            <FrameLayout android:id="@+id/frameGroup76"
                                android:layout_height="@dimen/_168pxv"
                                android:layout_marginTop="@dimen/_12pxv" android:layout_width="@dimen/_121pxh">
                                <ImageView
                                    android:id="@+id/imageRectangle321"
                                    android:layout_gravity="start"
                                    android:layout_height="@dimen/_168pxh"
                                    android:layout_width="@dimen/_121pxh"
                                    android:scaleType="fitXY"
                                    cornerRadius="@{@dimen/_21pxh}"
                                    imageRes="@{@drawable/img_rectangle321}"
                                    tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle321"/>
                                <TextView android:ellipsize="end"
                                    android:id="@+id/txtCountry2"
                                    android:layout_gravity="top|center"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="@dimen/_20pxv"
                                    android:layout_marginEnd="@dimen/_30pxh"
                                    android:layout_marginStart="@dimen/_30pxh"
                                    android:layout_marginTop="@dimen/_20pxv"
                                    android:layout_width="wrap_content"
                                    android:singleLine="true"
                                    android:text="@{abcVM.abcModel.txtCountry2}"
                                    style="@style/txtPoppinsmedium16_1" tools:text="@string/lbl_iceland"/>
                            </FrameLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:gravity="center_vertical"
                    android:id="@+id/linearGroup6887"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_38pxv"
                    android:layout_width="wrap_content" android:orientation="horizontal">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtAddtrip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.76"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{abcVM.abcModel.txtAddtrip}"
                        style="@style/txtPoppinsmedium16_1" tools:text="@string/lbl_add_trip"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:ellipsize="end" android:gravity="center"
                        android:id="@+id/btnGroup87"
                        android:layout_height="@dimen/_20pxv"
                        android:layout_marginBottom="@dimen/_2pxv"
                        android:layout_marginStart="@dimen/_3pxh"
                        android:layout_marginTop="@dimen/_2pxv"
                        android:layout_width="@dimen/_37pxh"
                        android:singleLine="true"
                        android:text="@string/lbl_button"
                        android:textAllCaps="false"
                        style="@style/btnregular8" tools:text="@string/lbl_button"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
